更新密码加密

--- a/FileManage/App_Data/umbraco.config
+++ b/FileManage/App_Data/umbraco.config
@@ -9,10 +9,22 @@
 
 ]>
 <root id="-1">
-  <home id="1115" key="286bf910-1455-41e2-888d-dc05a4fbc8a5" parentID="-1" level="1" creatorID="0" sortOrder="0" createDate="2016-07-14T14:04:32" updateDate="2016-07-14T14:04:32" nodeName="文件管理" urlName="文件管理" path="-1,1115" isDoc="" nodeType="1106" creatorName="zcs" writerName="zcs" writerID="0" template="1094" nodeTypeAlias="home">
-    <files id="1116" key="ff3a0e5b-75d3-4f9a-bd23-a42cc39d9ad7" parentID="1115" level="2" creatorID="0" sortOrder="0" createDate="2016-07-14T14:05:00" updateDate="2016-07-14T14:05:00" nodeName="12" urlName="12" path="-1,1115,1116" isDoc="" nodeType="1104" creatorName="zcs" writerName="zcs" writerID="0" template="1078" nodeTypeAlias="files">
+  <home id="1115" key="286bf910-1455-41e2-888d-dc05a4fbc8a5" parentID="-1" level="1" creatorID="0" sortOrder="0" createDate="2016-07-14T14:04:32" updateDate="2016-07-28T13:57:11" nodeName="文件管理" urlName="文件管理" path="-1,1115" isDoc="" nodeType="1106" creatorName="zcs" writerName="我是测试账号" writerID="1" template="1094" nodeTypeAlias="home">
+    <files id="1116" key="ff3a0e5b-75d3-4f9a-bd23-a42cc39d9ad7" parentID="1115" level="2" creatorID="0" sortOrder="0" createDate="2016-07-14T14:05:01" updateDate="2016-07-28T13:57:11" nodeName="12" urlName="12" path="-1,1115,1116" isDoc="" nodeType="1104" creatorName="zcs" writerName="我是测试账号" writerID="1" template="1078" nodeTypeAlias="files">
+      <fileName><![CDATA[test]]></fileName>
       <fileURL><![CDATA[1053]]></fileURL>
-      <fileName><![CDATA[12]]></fileName>
     </files>
+    <folders id="1133" key="efd74204-039b-4451-b3d6-d4a7a50c43d8" parentID="1115" level="2" creatorID="1" sortOrder="1" createDate="2016-07-28T11:49:17" updateDate="2016-07-28T13:57:11" nodeName="test" urlName="test" path="-1,1115,1133" isDoc="" nodeType="1105" creatorName="我是测试账号" writerName="我是测试账号" writerID="1" template="1091" nodeTypeAlias="folders">
+      <folderName><![CDATA[test]]></folderName>
+      <folders id="1134" key="ff954e55-e8c0-4029-b105-3b3bcf61d6e8" parentID="1133" level="3" creatorID="1" sortOrder="0" createDate="2016-07-28T11:49:45" updateDate="2016-07-28T13:57:11" nodeName="test3" urlName="test3" path="-1,1115,1133,1134" isDoc="" nodeType="1105" creatorName="我是测试账号" writerName="我是测试账号" writerID="1" template="1091" nodeTypeAlias="folders">
+        <folderName><![CDATA[test3]]></folderName>
+      </folders>
+    </folders>
+    <folders id="1135" key="3aca9a4a-bdc3-4efb-8baf-f4890d953f2a" parentID="1115" level="2" creatorID="0" sortOrder="2" createDate="2016-07-28T12:02:29" updateDate="2016-07-28T13:57:11" nodeName="test (1)" urlName="test-1" path="-1,1115,1135" isDoc="" nodeType="1105" creatorName="zcs" writerName="我是测试账号" writerID="1" template="1091" nodeTypeAlias="folders">
+      <folderName><![CDATA[test]]></folderName>
+      <folders id="1136" key="b7e69b3c-a491-4cff-b273-c9f870b3b576" parentID="1135" level="3" creatorID="0" sortOrder="0" createDate="2016-07-28T12:02:29" updateDate="2016-07-28T13:57:11" nodeName="test3" urlName="test3" path="-1,1115,1135,1136" isDoc="" nodeType="1105" creatorName="zcs" writerName="我是测试账号" writerID="1" template="1091" nodeTypeAlias="folders">
+        <folderName><![CDATA[test3]]></folderName>
+      </folders>
+    </folders>
   </home>
 </root>
