--- a/FileManage/Config/metablogConfig.config
+++ b/FileManage/Config/metablogConfig.config
@@ -1,3 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <metablogapi>
+  <channel>
+    <name>测试名称</name>
+    <user>0</user>
+    <startNode>-1</startNode>
+    <fullTree>True</fullTree>
+    <documentTypeAlias>files</documentTypeAlias>
+    <fields>
+      <categories>
+      </categories>
+      <description>
+      </description>
+      <excerpt>
+      </excerpt>
+    </fields>
+    <mediaObjectSupport enabled="True" folderId="-1" mediaTypeAlias="Image" mediaTypeFileProperty="umbracoFile" />
+  </channel>
 </metablogapi>
