基于Umbraco更新用户管理插件遗留问题 1、添加、修改时候用户类型没有读取数据库 2、区域配置没有读取xml配置文件 修改用户时没读取配置的模块 3、密码没有加密

--- a/UserManage/UserManage.csproj
+++ b/UserManage/UserManage.csproj
@@ -316,6 +316,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Plugins\UserManage\ApplicationConfig.cs" />
     <Compile Include="App_Plugins\UserManage\test.aspx.cs">
       <DependentUpon>test.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
